--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Stats</title>
+    <title>The Truth about Terrorism and Immigration</title>
     <link rel="stylesheet" href="styles.css">
+    <meta property="og:image" content="share.png">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Anton|Open+Sans+Condensed:300" rel="stylesheet">
   </head>
