--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>The Truth about Terrorism and Immigration</title>
     <link rel="stylesheet" href="styles.css">
     <meta property="og:image" content="share.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1024">
+    <meta property="og:image:height" content="1024">
+
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Anton|Open+Sans+Condensed:300" rel="stylesheet">
   </head>
