--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>The Truth about Terrorism and Immigration</title>
     <link rel="stylesheet" href="styles.css">
-    <meta property="og:image" content="share.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/mvincent7891/stats/master/share.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1024">
     <meta property="og:image:height" content="1024">
